# PyrsistenceSniper

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
pyrsistencesniper/: __init__.py  cli.py
pyrsistencesniper/core/: filesystem.py
pyrsistencesniper/forensics/: signer.py
pyrsistencesniper/models/: check.py
pyrsistencesniper/output/: __init__.py  base.py  csv_output.py  html_output.py  xlsx_output.py
pyrsistencesniper/plugins/: base.py
pyrsistencesniper/plugins/T1037/: gp_scripts.py
pyrsistencesniper/plugins/T1053/: scheduled_tasks.py
pyrsistencesniper/plugins/T1098/: rid_hijacking.py
pyrsistencesniper/plugins/T1137/: outlook_home_page.py
pyrsistencesniper/plugins/T1543/: windows_services.py
pyrsistencesniper/plugins/T1546/: disk_cleanup.py  file_association.py  netsh_helper.py  power_automate.py  protocol_handlers.py  recycle_bin_com.py  shell_execute_hooks.py  typelib_hijack.py  windows_terminal.py  wmi_subscriptions.py
pyrsistencesniper/plugins/T1547/: boot_execute.py  explorer_context_menu.py  font_drivers.py  lsa_packages.py  print_monitors.py  run_services.py  shell_folders.py  startup_folder.py  time_providers.py
pyrsistencesniper/plugins/T1556/: network_provider.py
pyrsistencesniper/plugins/T1574/: appdomain_manager.py  content_index_dll.py  dll_loading.py  dotnet_profiler_registry.py  known_dlls.py  snmp_extension.py
tests/: test_execute_definition.py  test_output.py
tests/plugins/: test_appdomain_manager.py  test_boot_execute.py  test_content_index_dll.py  test_dotnet_profiler_registry.py  test_dotnet_startup_hooks.py  test_file_association.py  test_font_drivers.py  test_known_dlls.py  test_lsa_packages.py  test_network_provider.py  test_outlook_home_page.py  test_print_monitors.py  test_protocol_handlers.py  test_recycle_bin_com.py  test_run_services.py  test_scheduled_tasks.py  test_shell_execute_hooks.py  test_shell_folders.py  test_snmp_extension.py  test_terminal_services.py  test_time_providers.py  test_typelib_hijack.py  test_windows_services.py  test_winlogon.py
