[project]
name = "pyrsistencesniper"
version = "0.4.0"
description = ""
authors = [
    {name = "Maurice Fielenbach",email = "info@hexastrike.com"}
]
requires-python = ">=3.10"
dependencies = [
    "libregf-python (>=20240303,<20280000)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "signify (>=0.9.2,<0.10.0)",
    "httpx (>=0.28.0,<1.0.0)",
    "platformdirs (>=4.9.2,<5.0.0)",
    "rich (>=13.0,<15.0)",
    "defusedxml (>=0.7.1,<1)",
    "openpyxl (>=3.1.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
pyrsistencesniper = "pyrsistencesniper.cli:main"

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["pyrsistencesniper", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "ANN",  # flake8-annotations
    "RUF",  # ruff-specific rules
    "N",    # pep8-naming
    "S",    # flake8-bandit (security)
    "PT",   # flake8-pytest-style
    "ARG",  # flake8-unused-arguments
    "ERA",  # eradicate (commented-out code)
    "PL",   # pylint
    "PERF", # perflint
    "RET",  # flake8-return
    "FA",   # flake8-future-annotations
    "T20",  # flake8-print
    "PTH",  # flake8-use-pathlib
]
ignore = [
    "PLR0913",  # too many arguments -- legitimate for AnalysisContext, plugin constructors
    "PLC0415",  # import-outside-toplevel -- inline imports kept only for circular-import avoidance
    "S101",     # assert used for internal invariants
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ANN", "ARG", "PLR2004", "PT019", "N999"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
show_error_codes = true
warn_unreachable = true
enable_error_code = ["ignore-without-code", "redundant-cast", "truthy-bool"]

[[tool.mypy.overrides]]
module = "signify.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pyregf"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "defusedxml.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "openpyxl.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--strict-markers", "--strict-config", "-ra"]
filterwarnings = ["error"]

[tool.coverage.run]
source = ["pyrsistencesniper"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "@overload",
]
show_missing = true
fail_under = 0

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "ruff (>=0.15.2,<0.16.0)",
    "types-pyyaml (>=6.0.12.20250915,<7.0.0.0)"
]
